fix: align StepHeader with detroit updates (#65)

--- a/src/headers/StepHeader.scss
+++ b/src/headers/StepHeader.scss
@@ -3,11 +3,14 @@
   --circle-color: var(--bloom-color-primary);
   --circle-desktop-size: var(--bloom-s8);
   --circle-mobile-size: var(--bloom-s6);
-  --font-desktop-size: var(--bloom-font-size-lg);
+  --font-desktop-size: 1.125rem;
   --font-mobile-size: var(--bloom-font-size-base);
   --circle-x-padding: var(--bloom-s0_5);
   --title-spacing: var(--bloom-s1_5);
   --label-font-weight: 600;
+  --font-family: var(--bloom-font-sans);
+
+  font-family: var(--font-family);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
